objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_On__c</fullName>
        <formula>CASE(LEFT(WhatId,3), 
&quot;001&quot;,&quot;Account&quot;, 
&quot;006&quot;,&quot;Opportunity&quot;, 
&quot;500&quot;,&quot;Case&quot;, 
CASE(LEFT(WhoId,3), 
&quot;003&quot;,&quot;Contact&quot;, 
&quot;00Q&quot;,&quot;Lead&quot;, 
NULL))</formula>
        <inlineHelpText>This field provides description to what object this record belongs to.</inlineHelpText>
        <label>Activity On</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Result_Detail_1__c</fullName>
        <inlineHelpText>Details of the call result</inlineHelpText>
        <label>Call Result Detail 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Call_Result__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ARC AP</fullName>
                </value>
                <value>
                    <fullName>Closed Failed to Connect</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Date Availability</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Local Rep</fullName>
                </value>
                <value>
                    <fullName>Not Interested / No Reason Given</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Recently Certified</fullName>
                </value>
                <value>
                    <fullName>Referred</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Result_Detail_2__c</fullName>
        <inlineHelpText>Details of the call result</inlineHelpText>
        <label>Call Result Detail 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Call_Result_Detail_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Group Size</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>NAN</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Shopping</fullName>
                </value>
                <value>
                    <fullName>Too High</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>ARC AP</fullName>
                </value>
                <value>
                    <fullName>ARC Community</fullName>
                </value>
                <value>
                    <fullName>ARC Full Service</fullName>
                </value>
                <value>
                    <fullName>Competitor - AP</fullName>
                </value>
                <value>
                    <fullName>Competitor - Full Service</fullName>
                </value>
                <value>
                    <fullName>Competitor - Group Size</fullName>
                </value>
                <value>
                    <fullName>Local Rep</fullName>
                </value>
                <value>
                    <fullName>ARC Community - Group Size</fullName>
                </value>
                <value>
                    <fullName>ARC Community - Other</fullName>
                </value>
                <value>
                    <fullName>ARC Community - Price</fullName>
                </value>
                <value>
                    <fullName>Demo - No Fee Class</fullName>
                </value>
                <value>
                    <fullName>Field Non BGST Class</fullName>
                </value>
                <value>
                    <fullName>FO Other</fullName>
                </value>
                <value>
                    <fullName>RCO Website</fullName>
                </value>
                <value>
                    <fullName>Pending Agreement/Proposal</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Wrong Email</fullName>
                </value>
                <value>
                    <fullName>Wrong Phone Number</fullName>
                </value>
                <value>
                    <fullName>Wrong POC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <inlineHelpText>Result of the call</inlineHelpText>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open - Not Yet Worked</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>No Sale</fullName>
                </value>
                <value>
                    <fullName>No Opportunity</fullName>
                </value>
                <value>
                    <fullName>Not Interested - No Reason Given</fullName>
                </value>
                <value>
                    <fullName>Aged Pipeline Lead</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Source__c</fullName>
        <inlineHelpText>Origin of the call</inlineHelpText>
        <label>Call Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>TSC Transfer</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Voice Mail</fullName>
                </value>
                <value>
                    <fullName>After-Hours Transfer Lead Form</fullName>
                </value>
                <value>
                    <fullName>Referral/Repeat Business</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is utilized to support the data migration process. It will contain a combination of the source system identifier and the source system&apos;s unique record identifier. This field should be deleted after all migration activities are complete.</description>
        <label>DM External ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DM_Legacy_Owner_Name__c</fullName>
        <label>DM Legacy Owner Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delta_Data_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, this record was migrated as part of the Delta Data migration project</description>
        <inlineHelpText>If Checked, this record was migrated as part of the Delta Data migration project</inlineHelpText>
        <label>Delta Data Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System field used for Data Migration.</description>
        <label>Source System</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>